# richillcapital-max-python

./: .gitignore  README.md  pyproject.toml
richillcapital_max/: client.py
tests/: client_test.py
