[tool.pdm]
[tool.pdm.dev-dependencies]

[project]
name = "richillcapital-max"
version = "0.1.0"
description = ""
authors = [
    {name = "Mengsyue Amao Tsai", email = "mengsyue.tsai@outlook.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
